--- a/css/keyframes.css
+++ b/css/keyframes.css
@@ -3,37 +3,41 @@
     width: 350px;
     height: 120px;
   }
+  51% {
+    width: 4px;
+    height: 4px;
+  }
   60% {
     width: 1px;
     height: 1px;
   }
   65% {
-    width: 3px;
-    height: 3px;
+    width: 4px;
+    height: 4px;
   }
   70%{
     width: 1px;
     height: 1px
   }
   75%{
-    width: 3px;
-    height: 3px
+    width: 4px;
+    height: 4px
   }
   80%{
     width: 1px;
     height: 1px
   }
   85% {
-    width: 3px;
-    height: 3px;
+    width: 4px;
+    height: 4px;
   }
   90%{
     width: 1px;
     height: 1px
   }
   95%{
-    width: 3px;
-    height: 3px
+    width: 4px;
+    height: 4px
   }
   100%{
     width: 1px;
@@ -72,7 +76,7 @@
    background-color:  #ffd964;
   }
   20% {
-   background-color:  #ffe490;
+   background-color:   #f68656;
   }
   30% {
    background-color:  #ffeebc;
@@ -82,6 +86,7 @@
   }
   50% {
    background-color:  #ecedef;
+  }
   60% {
    background-color:  #e0e2e5;
   }
@@ -96,39 +101,46 @@
   }
   100%{
     background-color: #C2C5CC;
-    /*left:-290px;*/
   }
 }
 
-/*@keyframes change {
-  0% {
-    opacity: 0.2;
-  }
-  100% {
-    opacity: 1;
-  }
-}*/
 
-@keyframes change-day {
-  0% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0.9;
-  }
-  100% {
-    opacity: 0.1;
-  }
+@keyframes fadein{
+    0% { opacity:1; }
+    66% { opacity:0.5; }
+    100% { opacity:0; }
 }
 
-/*@keyframes road {
-  0% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0.9;
-  }
-  100% {
-    opacity: 0.1;
-  }
-}*/
+@-webkit-keyframes fadein{
+    0% { opacity:1; }
+    66% { opacity:0.5; }
+    100% { opacity:0; }
+}
+
+@keyframes fadeout{
+    0% { opacity:0; }
+    50% { opacity:0.4; }
+    51% { opacity:0.7; }
+    100% { opacity:0.8; }
+}
+
+@-webkit-keyframes fadeout{
+    0% { opacity:0; }
+    50% { opacity:0.4; }
+    51% { opacity:0.7; }
+    100% { opacity:0.8; }
+}
+
+@keyframes road{
+    0% { opacity:1; }
+    6% { opacity:0.7; }
+    90% { opacity:0.5; }
+    100% { opacity:0.4; }
+}
+
+@-webkit-keyframes road{
+    0% { opacity:1; }
+    66% { opacity:0.7; }
+    90% { opacity:0.5; }
+    100% { opacity:0.4; }
+}
