--- a/css/style.css
+++ b/css/style.css
@@ -7,47 +7,33 @@
 body {
   display:grid;
   place-items: start end;
-  padding: 80px 15% 0 0;
   height:100vh;
   background-color: #6699cc;
   transform-style:preserve-3d;
-  animation: bg-color 10s ease-in-out infinite;
+  animation: bg-color 25s ease-in-out infinite;
  } 
+
+.sky {
+  padding: 80px 15% 0 0;
+}
 
 .a{
   transform:perspective(1000px) rotatey(10deg);
   osition:relative;
-  width:130px;
-  height:130px;
+  width:100px;
+  height:100px;
   border-radius:100%;
-  /*background:linear-gradient(45deg, rgba(255,255,255,.14), rgba(255,255,255,.14));*/
   overflow:hidden;
-  }
+}
 
 .b{
   position:relative;
   left:0px;
   border-radius:50%;
-  width:130px;
-  height:130px;
-  /*background:#6699cc;*/
-  /*box-shadow:inset 5px 0 15px rgba(255,255,255,.35),3px 0 10px rgba(255,255,255,.3), */
- /*inset   0px 0px 10px -1px rgba(255,255,255,.624);*/
-  animation: round 10s ease-in-out infinite;
-
-  }
-
-/* clouds */
-
-/*body {
-  background: #00b4ff;
-  color: #333;
-  font: 100% Arial, Sans Serif;
-  height: 100vh;
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-}*/
+  width:100px;
+  height:100px;
+  animation: round 25s ease-in-out infinite;
+}
 
 #background-wrap {
   position: relative;
@@ -62,65 +48,43 @@ body {
 
 }
 
-.first-row, .second-row, .middle{
+.x1, .x2, .x3, .x4, .x5{
   display: inline-block;
   position: absolute;
 }
 
-.first-row {
-  top: 50px;
-  left: 70px;
-}
-
-.second-row {
-  top: 80px;
-  left: 450px;
-}
-
-.middle {
-  top: 60;
-  left: 300px;
-}
-/* KEYFRAMES */
-
-/*@keyframes animateCloud {
-    0% {
-        margin-left: 50px;
-    }
-    100% {
-        margin-left: 100%;
-    }
-}*/
-
-/* ANIMATIONS */
-
 .x1 {
-
-  animation: animateCloud 35s linear infinite;
+  top: 80px;
+  left: 50px;
   transform: scale(0.65);
 }
 
 .x2 {
-  animation: animateCloud 20s linear infinite;
+  top: 90px;
+  left: 200px;
   transform: scale(0.3);
+
 }
 
 .x3 {
-  animation: animateCloud 30s linear infinite;
+  top: 150px;
+  left: 300px;
   transform: scale(0.5);
-}
 
+}
 .x4 {
-  animation: animateCloud 18s linear infinite;
+  top: 50px;
+  left: 450px;
   transform: scale(0.4);
-}
 
+}
 .x5 {
-  animation: animateCloud 25s linear infinite;
+  top: 70px;
+  left: 600px;
   transform: scale(0.55);
+
 }
 
-/* OBJECTS */
 
 .cloud {
   background: #fff;
@@ -128,10 +92,11 @@ body {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fff', endColorstr='#f1f1f1',GradientType=0 );
   border-radius: 100px;
   box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
-
   height: 120px;
   position: relative;
   width: 350px;
+  animation: stars 25s ease-out infinite;
+
 }
 
 .cloud:after, .cloud:before {
@@ -139,6 +104,7 @@ body {
   content: '';
   position: absolute;
   z-indeX: -1;
+  animation: stars 25s ease-out infinite;
 }
 
 .cloud:after {
@@ -152,9 +118,55 @@ body {
 
 .cloud:before {
   border-radius: 200px;
-
   width: 180px;
   height: 180px;
   right: 50px;
   top: -90px;
 }
+
+.house-day {
+  position: absolute;
+  bottom: 95px;
+  right: 150px;
+  z-index: 5;
+  -webkit-animation: 25s ease  infinite  fadein;
+  animation: 25s ease  infinite  fadein;
+}
+
+.house-night {
+  position: absolute;
+  bottom: 95px;
+  right: 150px;
+  z-index: 5;
+  -webkit-animation: 25s ease  infinite  fadeout;
+  animation: 25s ease  infinite  fadeout;
+}
+
+.house-night img, .house-day img {
+  width: 50%;
+  height: 50%;
+}
+
+.smoke {
+  position: absolute;
+  bottom: 280px;
+  right: 420px;
+  -webkit-animation: 25s ease  infinite  fadeout;
+  animation: 25s ease  infinite  fadeout;
+}
+
+.road {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width:  100%;
+  height: 100px;
+  background-image: url(../img/road.png);
+  background-position: center; 
+  background-size: cover;
+  -webkit-animation: 25s ease  infinite  road;
+  animation: 25s ease  infinite  road;
+  
+}
+
+
