--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
- } 
-
 body {
   display:grid;
   place-items: start end;
@@ -13,6 +7,7 @@ body {
   animation: bg-color 25s ease-in-out infinite;
  } 
 
+/* sky and sun/moon styles*/
 .sky {
   padding: 80px 15% 0 0;
 }
@@ -47,6 +42,8 @@ body {
   z-index: -1;
 
 }
+
+/* cloud styles */
 
 .x1, .x2, .x3, .x4, .x5{
   display: inline-block;
@@ -84,7 +81,6 @@ body {
   transform: scale(0.55);
 
 }
-
 
 .cloud {
   background: #fff;
@@ -124,6 +120,7 @@ body {
   top: -90px;
 }
 
+/* house day and night image div styles */
 .house-day {
   position: absolute;
   bottom: 95px;
@@ -147,6 +144,7 @@ body {
   height: 50%;
 }
 
+/* smoke styles */
 .smoke {
   position: absolute;
   bottom: 280px;
@@ -154,7 +152,7 @@ body {
   -webkit-animation: 25s ease  infinite  fadeout;
   animation: 25s ease  infinite  fadeout;
 }
-
+/* road styles */
 .road {
   position: absolute;
   bottom: 0;
